# narwhal

./: .gitignore  README.md
benchmark/: fabfile.py
benchmark/benchmark/: commands.py  local.py  logs.py  utils.py
config/: Cargo.toml
config/src/: lib.rs
consensus/src/tests/: consensus_tests.rs
crypto/: Cargo.toml
crypto/examples/: basic_threshold_decryption.rs  ciphertext_over_tcp.rs  parallel_decryption.rs  serialize_keys.rs  threshold_ciphertext_over_tcp.rs
crypto/src/: lib.rs  threshold.rs
crypto/src/tests/: crypto_tests.rs
network/src/: simple_sender.rs
node/: Cargo.toml
node/src/: benchmark_client.rs  main.rs
primary/src/: aggregators.rs  core.rs  header_waiter.rs  primary.rs
primary/src/tests/: core_tests.rs  proposer_tests.rs
worker/: Cargo.toml
worker/src/: batch_maker.rs  lib.rs  processor.rs  quorum_waiter.rs  worker.rs
worker/src/tests/: batch_maker_tests.rs  common.rs  helper_tests.rs  quorum_waiter_tests.rs  synchronizer_tests.rs  worker_tests.rs
